--- a/templates/case_studies/meta.html
+++ b/templates/case_studies/meta.html
@@ -3,7 +3,6 @@
 {% load i18n %}
 
 {% if user.profile.is_superuser %}
-
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     
@@ -30,7 +29,8 @@
       
     </ul>
     
-    <ul class="nav navbar-nav navbar-right">
+    <ul class="nav navbar-nav">
+      <li><a><u>Status:</u> </a></li>
       <li><a> {{ case_study.obj_perms }} </a></li>
       <li><a> {{ case_study.obj_status }} </a></li>
       
