--- a/templates/case_studies/search-form.html
+++ b/templates/case_studies/search-form.html
@@ -2,19 +2,19 @@
 {% load perm_tags %}
 {% load base_filters %}
 
+
 {% if SITE_GLOBAL_SEARCHINDEX %}
 <form class="form-inline" action="{% url 'case_study' %}" method="get" role="search">
   <div class="form-group">
     <div class="input-group">
-      <input type="text" class="form-control" name="q" value="{{ request.GET.q|striptags }}" placeholder="Search" />
+      <input class="form-control" type="text" name="q" value="{{ request.GET.q|striptags }}" placeholder="Search" />
+      <a class="input-group-addon btn btn-default" type="submit">
+        <i class="glyphicon glyphicon-search" alt="{% trans 'Search' %}"></i>
+      </a>
     </div>
-  <button class="btn btn-default" type="submit">
-    <i class="glyphicon glyphicon-search" alt="{% trans 'Search' %}"></i>
-  </button>
-    
- </div>
+  </div>
+  
   {% has_perm user case_studies.add_casestudy as can_add_case_study %}
-
   {% if can_add_case_study %}
   <div class="form-group pull-right">
     <a class="btn btn-primary" href="{% url "admin:case_studies_casestudy_add" %}">
