--- a/templates/articles/search-form.html
+++ b/templates/articles/search-form.html
@@ -35,11 +35,13 @@
     {% endif %}
   </div>
   
-  <div class="input-group">
+  <div class="input-group add-on">
     <input class="form-control" type="text" name="q" value="{{ request.GET.q|striptags }}" placeholder="Search" />
-    <a class="input-group-addon btn btn-default" type="submit">
-      <i class="glyphicon glyphicon-search" alt="{% trans 'Search' %}"></i>
-    </a>
+    <div class="input-group-btn">
+      <button class="btn btn-default" type="submit">
+        <i class="glyphicon glyphicon-search" alt="{% trans 'Search' %}"></i>
+      </button>
+    </div>
   </div>
   
   {% if can_add_article %}
