--- a/templates/case_studies/search-form.html
+++ b/templates/case_studies/search-form.html
@@ -6,11 +6,13 @@
 {% if SITE_GLOBAL_SEARCHINDEX %}
 <form class="form-inline" action="{% url 'case_study' %}" method="get" role="search">
   <div class="form-group">
-    <div class="input-group">
+    <div class="input-group add-on">      
       <input class="form-control" type="text" name="q" value="{{ request.GET.q|striptags }}" placeholder="Search" />
-      <a class="input-group-addon btn btn-default" type="submit">
-        <i class="glyphicon glyphicon-search" alt="{% trans 'Search' %}"></i>
-      </a>
+      <div class="input-group-btn">
+        <button class="btn btn-default" type="submit">
+          <i class="glyphicon glyphicon-search" alt="{% trans 'Search' %}"></i>
+        </button>
+      </div>
     </div>
   </div>
   
