--- a/templates/photos/photo-set/latest.html
+++ b/templates/photos/photo-set/latest.html
@@ -33,21 +33,25 @@
   
   {% if photo_sets %}
   
-  {% for photo_set in photo_sets %}
   
-  {% if forloop.first %}<div class="row">{% endif %}
-  
-  <div class="col-sm-4">
-    {% search_result photo_set %}
+  <div class="container-fluid">  
+    <div class="grid">
+      
+      <div class="grid-sizer col-xs-12"></div>
+      
+      {% for photo_set in photo_sets %}
+   
+      <div class="grid-item col-md-4 col-sm-4 col-xs-4">
+        {% search_result photo_set %}
+      </div>
+      
+      {% endfor %}
+      
+      {% paginate %}
+      {% else %}
+      
+    </div>
   </div>
-  
-  {% if forloop.counter|divisibleby:3 %}</div><div class="row">{% endif %}
-  {% if forloop.last %}</div>{% endif %}  
-  
-  {% endfor %}
-  
-  {% paginate %}
-  {% else %}
   {% endif %}
   
 </div>
@@ -61,6 +65,13 @@
   $('.photo-set .info .actions .delete-set').click(function(){
   var delete_photo = confirm('{% trans "Permenantly delete photo set?" %}'); // confirm
   if(!delete_photo) return false; // do not delete
+  });
+</script>
+<script>
+  $('.grid').masonry({
+  itemSelector: '.grid-item',
+  columnWidth: '.grid-sizer',
+  percentPosition: true
   });
 </script>
 {% endblock %}
