add masonry class

--- a/templates/photos/photo-set/search-result.html
+++ b/templates/photos/photo-set/search-result.html
@@ -4,7 +4,7 @@
 {% load perm_tags %}
 {% load humanize %}
 
-<div class="panel panel-default">
+<div class="grid-item-content panel panel-default">
   
   <!-- START: PANEL BODY -->
   <div class="panel-body">
