--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -6,9 +6,10 @@
 {% load news_tags %}
 {% load article_tags %}
 {% load event_tags %}
+{% load i18n %}
+
 {% load perm_tags %}
 {% load search_tags %}
-{% load i18n %}
 
 <!-- begin: get updates -->
 
@@ -17,7 +18,7 @@
     <h2>Get Updates</h2>
     <p>Stay in touch! Get updates about our events, articles, and other news.</p>
     
-    <!-- Button trigger bootstrap modal -->
+    <!-- Button trigger modal -->
     <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">  
       Join our Mailing List 
     </button> 
@@ -26,7 +27,6 @@
 </div>
 
 <!-- end: get updates -->
-
 
 <!-- begin: site search -->
 
@@ -37,26 +37,28 @@
     {% if SITE_GLOBAL_SEARCHINDEX %}
     <form class="form-inline" action="/search/" method="get" role="search">
       <div class="form-group">
-      
-        <div class="input-group">
-          <input type="text" class="form-control" title="Search" name="q" value="{{ request.GET.q|striptags }}" placeholder="Search" />
+        
+        <div class="input-group add-on">      
+          <input class="form-control" type="text" name="q" value="{{ request.GET.q|striptags }}" placeholder="Search" />
+          <div class="input-group-btn">
+            <button class="btn btn-default" type="submit">
+              <i class="glyphicon glyphicon-search" alt="{% trans 'Search' %}"></i>
+            </button>
+          </div>
         </div>
-        <button class="btn btn-default" type="submit">
-          <i class="glyphicon glyphicon-search" alt="{% trans 'Search' %}"></i>
-        </button>
         
       </div>
       
     </form>
     {% endif %}
+    
     <br /><br />
   </div>
 </div>
 
 <!-- end: site search -->
 
-
-<!-- start: recent news -->
+<!-- NEWS -->
 <div class="news-list">
   <div class="panel panel-default">
     <!-- begin: news-innerblock -->
@@ -80,7 +82,6 @@
       
     </div>
     <!--end: news-innerblock-->
-    <!--start: news-back-->
     <div class="panel-footer">
       <nav aria-label="back to news">  
         <ul class="pager">
@@ -88,7 +89,6 @@
         </ul>
       </nav>
     </div>
-    <!--end: news-back-->
+    
   </div>
 </div>
-<!-- end: recent news -->
