--- a/templates/articles/search-result.html
+++ b/templates/articles/search-result.html
@@ -3,7 +3,7 @@
 <article class="panel panel-default">
   
   <div class="panel-heading">
-    <h3><a href="{{ article.get_absolute_url }}">{% firstof article.headline trans "Untitled" %}</a></h3>
+    <h3 class="panel-title"><a href="{{ article.get_absolute_url }}">{% firstof article.headline trans "Untitled" %}</a></h3>
   </div>
   
   <div class="panel-body">
