--- a/templates/news/search-result.html
+++ b/templates/news/search-result.html
@@ -8,7 +8,7 @@
 <article class="col-md-12">
   <div class="panel panel-default">
     <div class="panel-heading">
-      <h3>
+      <h3 class="panel-title">
         <a href="{{ news.get_absolute_url }}">{% blocktrans with h=news.headline %}{{ h }}{% endblocktrans %}</a>
       </h3>
     </div>
