--- a/templates/news/search-result.html
+++ b/templates/news/search-result.html
@@ -5,27 +5,31 @@
 {% load news_tags %}
 {% load perm_tags %}
 
+<!-- UNCOMMENT TO PANELIZE NEWS RESULTS -->
+
 <article class="col-md-12">
-  <div class="panel panel-default">
-    <div class="panel-heading">
-      <h3 class="panel-title">
-        <a href="{{ news.get_absolute_url }}">{% blocktrans with h=news.headline %}{{ h }}{% endblocktrans %}</a>
-      </h3>
-    </div>
-    
-    <div class="panel-body">
+<!--  <div class="panel panel-default">
+    <div class="panel-heading"> 
+      <h3 class="panel-title">-->
+  <h3>
+    <a href="{{ news.get_absolute_url }}">{% blocktrans with h=news.headline %}{{ h }}{% endblocktrans %}</a>
+  </h3>
+<!--    </div> -->
+     
+<!--    <div class="panel-body"> -->
       <div class="t-search-result-body">
         <p class="item-content">
           {% blocktrans with s=news.body|truncatewords:100|safe %}{{ s }}{% endblocktrans %}
         </p>
       </div>
-    </div>
+<!--    </div> -->
     
     {% include "news/meta.html" %}
     
     <form name="news-delete" method="POST" action="{% url 'news.delete' news.pk %}">{% csrf_token %}
       <input type="hidden" name="action" value="delete">
     </form>
-    
-  </div>
+  
+    <br />
+<!--  </div> -->
 </article>
