--- a/templates/events/month-view.html
+++ b/templates/events/month-view.html
@@ -21,21 +21,25 @@
 
 <div class="month-view">
   
+  <div class="event-buttons pull-right">
+    <ul class="nav nav-pills">
+        <br /><br /><br />
+      <li><a href="/events/search/" class="btn btn-primary">List View</a></li>
+    </ul>
+  </div>
+  
   <div class="row">
-    
-    <div class="col-md-9">
+    <div class="col-md-9 col-xs-12">
+      
       <div class="page-header">
-        
         <ul class="list-inline text-center">
           <li><h1><a href="">{{ month_names.1 }} {{ year }}</a></h1></li>
           <li class="pull-left"><h1><a href="{{ prev_month_url }}"> <i class="fa fa-angle-left"></i></a></h1></li>
           <li class="pull-right"><h1><a href="{{ next_month_url }}"><i class="fa fa-angle-right"></i></a></h1></li>
         </ul>
-        
       </div>
       
       <div style="clear:both;"></div>
-      
       <div class="calendar-wrap">
         
         <div class="month-wrap">
@@ -102,43 +106,48 @@
     </div>
     {# TODO: If there are no types, don't show sidebar #}
     
-    <div class="col-md-3">
-      <div class="month-side-bar">
-        
-        <div class="header">
-          <h2>{% trans "Filter by Type" %} </h2>
-          <hr />
+    <div class="col-md-3 col-xs-12">
+      <br /><br/>
+      <div class="well">
+        <div class="month-side-bar">
+          
+          <div class="header">        
+            <h2>{% trans "Filter by Type" %} </h2>
+            <hr />
+          </div>
+          
+          <div class="types">
+            <div class="type all-types">
+              <a class="btn btn-default" href="{% url "event.month" year month %}">
+                {% trans "All Events" %}</a>
+            </div>
+            {% with type as curr_type %}
+            {% for type in types %}
+            
+            {% if curr_type == type.slug %}
+            
+            <div class="type">
+              <a class="btn btn-default" style="color:{{ type.fg_color }}; background-color:{{ type.bg_color }}; border-color:{{ type.border_color }};"
+              href="{% url "event.month" year month type.slug %}?latest">{{ type }}</a>
+            </div>
+            {% else %}
+            <div class="type">
+              <a class="btn btn-default" style="color:{{ type.fg_color }}; background-color:{{ type.bg_color }}; border-color:{{ type.bg_color }};"
+              href="{% url "event.month" year month type.slug %}?latest">{{ type }}</a>
+            </div>
+            {% endif %}
+            {% endfor %}
+            {% endwith %}
+          </div> <!-- END types --> 
+          <div style="clear:both;"></div>
         </div>
-        
-        <div class="types">
-          <div class="type all-types">
-            <a class="btn btn-default" href="{% url "event.month" year month %}">
-              {% trans "All Events" %}</a>
-          </div>
-          {% with type as curr_type %}
-          {% for type in types %}
-          
-          {% if curr_type == type.slug %}
-          
-          <div class="type">
-            <a class="btn btn-default" style="color:{{ type.fg_color }}; background-color:{{ type.bg_color }}; border-color:{{ type.border_color }};"
-            href="{% url "event.month" year month type.slug %}?latest">{{ type }}</a>
-          </div>
-          {% else %}
-          <div class="type">
-            <a class="btn btn-default" style="color:{{ type.fg_color }}; background-color:{{ type.bg_color }}; border-color:{{ type.bg_color }};"
-            href="{% url "event.month" year month type.slug %}?latest">{{ type }}</a>
-          </div>
-          {% endif %}
-          {% endfor %}
-          {% endwith %}
-        </div> <!-- END types --> 
-        <div style="clear:both;"></div>
       </div> <!-- END month-side-bar --> 
+      
       
     </div> <!-- END month-wrap --> 
     <!-- END calendar-wrap -->
   </div>
+  
 </div>
 
 <br/><br/>
