--- a/templates/events/search.html
+++ b/templates/events/search.html
@@ -20,7 +20,7 @@
 
 <div class="t search-view">
   <div class="page-header">
-    <h1>{{ SITE_GLOBAL_SITEPRIMARYKEYWORDS }} {% firstof MODULE_EVENTS_LABEL_PLURAL trans 'Events' %}</h1>
+    <h1>Recent {% firstof MODULE_EVENTS_LABEL_PLURAL trans 'Events' %}</h1>
   </div>
   
     <div class="event-tabs">
