--- a/templates/events/search-result.html
+++ b/templates/events/search-result.html
@@ -8,6 +8,8 @@
 {% load i18n %}
 {% load meta_tags %}
 
+<!-- you are here: /templates/events/search-result.html -->
+
 <div class="panel panel-default" itemscope itemtype="http://schema.org/Event"> <!-- old class: event-wrap -->
   
   <div class="row">
@@ -88,7 +90,7 @@
           
           {% if now > event.end_dt or now > event.registration_configuration.end_dt %}
           
-          <div class="attend-wrap closed">
+          <div class="attend-wrap closed pull-right">
             {% include "events/include/search-result-spots-taken.html" %}
             <div class="attend"><a href="">{% trans "Registration Closed" %}</a></div>
             <div style="clear:both;"></div>
@@ -98,15 +100,17 @@
           
           {% is_registered_user user event as registered_user %}
           {% if registered_user %}
-          <div class="attend-wrap registered">
+          <div class="attend-wrap registered pull-right">
             {% include "events/include/search-result-spots-taken.html" %}
             <div class="attend"><a href="{% url "event.myevents" %}">{% trans "You are registered" %}</a></div>
             <div style="clear:both;"></div>
           </div>
           {% else %}
-          <div class="attend-wrap">
-            {% include "events/include/search-result-spots-taken.html" %}
-            <a class="btn btn-default pull-right" href="{% url "event" event.pk %}">{% trans "Attend this event" %}</a>
+          <div class="attend-wrap pull-right">
+            <div>
+              {% include "events/include/search-result-spots-taken.html" %}
+            </div>
+            <a class="btn btn-default" href="{% url "event" event.pk %}">{% trans "Attend this event" %}</a>
             <div style="clear:both;"></div>
           </div>
           {% endif %}
