--- a/templates/events/search.html
+++ b/templates/events/search.html
@@ -18,83 +18,78 @@
 
 {% block content %}
 
+
 <div class="t search-view">
   <div class="page-header">
-    <h1>Upcoming {% firstof MODULE_EVENTS_LABEL_PLURAL trans 'Events' %}</h1>
+    <a class="btn btn-default pull-right" href="{% url "event.past_search" %}?{{ request.GET.urlencode }}">{% trans "Past Events" %}</a>
+    <a href="{% url "event.search" %}?{{ request.GET.urlencode }}"><h1>Upcoming {% firstof MODULE_EVENTS_LABEL_PLURAL trans 'Events' %}</h1></a>
+  </div>
+
+{% event_search %}
+  
+  {% autopaginate events 10 %}
+
+  <br />
+  <div class="highlight">
+    <em> You found {{ paginator.count }} event{{ paginator.count|pluralize }}
+      {% if with_registration %}with registration{% endif %}{% if event_type %}.
+      {% elif past %} starting before {{ start_dt|date:"F jS, Y" }}.
+      {% else %} starting on or after {{ start_dt|date:"F jS, Y" }}.{% endif %}</em>
   </div>
   
-    <div class="event-tabs">
-        <ul class="nav nav-tabs">
-            <li role="presentation" class="dropdown {% if not past %}active{% endif %}">
-                <a href="{% url "event.search" %}?{{ request.GET.urlencode }}">{% trans "Ongoing Events" %}</a>
-            </li>
-            <li role="presentation" class="dropdown {% if past %}active{% endif %}">
-                <a href="{% url "event.past_search" %}?{{ request.GET.urlencode }}">{% trans "Past Events" %}</a>
-            </li>
-        </ul>
-    </div>
-
-    {% autopaginate events 10 %}
-    {% event_search %}
-    <div class="highlight">
-        <em> You found {{ paginator.count }} event{{ paginator.count|pluralize }}
-        {% if with_registration %}with registration{% endif %}{% if event_type %}.
-        {% elif past %} starting before {{ start_dt|date:"F jS, Y" }}.
-        {% else %} starting on or after {{ start_dt|date:"F jS, Y" }}.{% endif %}</em>
-    </div>
-
-    <div class="events-wrap">
+  <div class="events-wrap">
     {% for event in events %}
-        {% search_result event %}
+    {% search_result event %}
     {% endfor %}
-    </div>
-
-    {% paginate %}
+  </div>
+  
+  
+  {% paginate %}
 </div>
 {% endblock %}
 
 {% block extra_body %}
-    {{ block.super }}
+{{ block.super }}
 
-    <script type="text/javascript" src="{{ STATIC_URL }}js/global/dropdown.js"></script>
-    <script type="text/javascript">
-        var iconrow = new dropdown({
-            container:    'more-options-wrap',
-            trigger:    'more-options-trigger',
-            target:        'more-options-target'
-        });
-    </script>
-    <script src="{{ STATIC_URL }}js/jquery.inputfieldtext.js" type="text/javascript"></script>
-    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.0/jquery-ui.min.js"></script>
-    <script type="text/javascript">
-        $(document).ready(function () {
-            $('.datepicker').datepicker({ dateFormat: 'yy-mm-dd' });
-        });
-        $('#id_search_category').change(function(){
-            var category = $('#id_search_category').val();
-            if (category==="priority" ) {
-                $('#id_q').attr('disabled', 'disabled');
-                $('#id_q').val('');
-            } else {
-                $('#id_q').removeAttr('disabled');
-            }
-        });
-        // Dialog
-        $('#event_export_dialog').dialog({
-            autoOpen: false,
-            width: 600,
-            buttons: {
-                "Close": function() {
-                    $(this).dialog("close");
-                }
-            }
-        });
-        // Dialog Link
-        $('#event_export_link').click(function(){
-            $('#event_export_dialog').show();
-            $('#event_export_dialog').dialog('open');
-
-            return false;
-        });
-    </script>
+<script type="text/javascript" src="{{ STATIC_URL }}js/global/dropdown.js"></script>
+<script type="text/javascript">
+  var iconrow = new dropdown({
+  container:    'more-options-wrap',
+  trigger:    'more-options-trigger',
+  target:        'more-options-target'
+  });
+</script>
+<script src="{{ STATIC_URL }}js/jquery.inputfieldtext.js" type="text/javascript"></script>
+<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.0/jquery-ui.min.js"></script>
+<script type="text/javascript">
+  $(document).ready(function () {
+  $('.datepicker').datepicker({ dateFormat: 'yy-mm-dd' });
+  });
+  $('#id_search_category').change(function(){
+  var category = $('#id_search_category').val();
+  if (category==="priority" ) {
+  $('#id_q').attr('disabled', 'disabled');
+  $('#id_q').val('');
+  } else {
+  $('#id_q').removeAttr('disabled');
+  }
+  });
+  // Dialog
+  $('#event_export_dialog').dialog({
+  autoOpen: false,
+  width: 600,
+  buttons: {
+  "Close": function() {
+  $(this).dialog("close");
+  }
+  }
+  });
+  // Dialog Link
+  $('#event_export_link').click(function(){
+  $('#event_export_dialog').show();
+  $('#event_export_dialog').dialog('open');
+  
+  return false;
+  });
+</script>
 {% endblock %}
