--- a/templates/profiles/index.html
+++ b/templates/profiles/index.html
@@ -51,56 +51,65 @@
         
         
         <div class="page-header">
-          <div class="col-sm-2">
-            {% if user_this == request.user %}
-            <a href="//gravatar.com/" target="_blank" title="Create / update your gravatar">
+          <div class="row">
+            <div class="col-sm-2">
+              {% if user_this == request.user %}
+              <a href="//gravatar.com/" target="_blank" title="Create / update your gravatar">
+                {% gravatar user_this 128 %}
+              </a>
+              {% else %}
               {% gravatar user_this 128 %}
-            </a>
-            {% else %}
-            {% gravatar user_this 128 %}
-            {% endif %}
-                        
+              {% endif %}
+            </div>
+            
+            <div class="col-sm-10">
+              <a href="https://en.gravatar.com" class="btn btn-default pull-right">Edit Profile Picture</a>
+              {% if profile.display_name %}
+              <h1>{% firstof profile.display_name %}</h1>
+              <h3>{% firstof user_this.get_full_name user_this.username %}</h3>
+              {% else %}
+              <h1>{% firstof user_this.get_full_name user_this.username %}</h1>
+              {% endif %}
+              {% if profile.member_number %}
+              {% if profile|allow_edit_by:user %}
+              <div style="padding-bottom: 1em;">
+                <span class="member-icon">{% trans 'Member ID' %}: {{ profile.member_number}}</span>
+              </div>
+              {% endif %}
+              {% endif %}
+              
+              {% if profile.company %}
+              <h5><strong>{{ profile.company }}</strong> — 
+              {% endif %}
+              
+              {% if profile.position_title %}
+              {{ profile.position_title }}</h5>
+              {% endif %}
+              
+              {% if city_state %}
+              <h5>{{ city_state }}</h5>
+              {% endif %}
+              
+              {% if user_this.skillset and user_this.skillset.is_first_responder %}
+              <p class="capitalize">{% trans "first responder" %} - <a href="{% url 'user.skills' user_this.username %}">{% trans "see skills" %}</a></p>
+              {% endif %}
+            </div>
+            
           </div>
-          
-          <a href="https://en.gravatar.com" class="btn btn-default pull-right">Edit Profile Picture</a>
-          {% if profile.display_name %}
-          <h1>{% firstof profile.display_name %}</h1>
-          <h3>{% firstof user_this.get_full_name user_this.username %}</h3>
-          {% else %}
-          <h1>{% firstof user_this.get_full_name user_this.username %}</h1>
-          {% endif %}
-          {% if profile.member_number %}
-          {% if profile|allow_edit_by:user %}
-          <div style="padding-bottom: 1em;">
-            <span class="member-icon">{% trans 'Member ID' %}: {{ profile.member_number}}</span>
-          </div>
-          {% endif %}
-          {% endif %}
-          
-          <p><strong>{% trans 'Username' %}:</strong> {{ profile.user.username }}</p>
-          {% if profile.company %}
-          <p>{{ profile.company }}</p>
-          {% endif %}
-          
-          {% if profile.position_title %}
-          <p>{{ profile.position_title }}</p>
-          {% endif %}
-          
-          {% if city_state %}
-          <p>{{ city_state }}</p>
-          {% endif %}
-          
-          {% if user_this.skillset and user_this.skillset.is_first_responder %}
-          <p class="capitalize">{% trans "first responder" %} - <a href="{% url 'user.skills' user_this.username %}">{% trans "see skills" %}</a></p>
-          {% endif %}
         </div>
       </div>
-            
+      
+      
       <div class="col-md-4 well">
         
         <h3>{% trans 'Contact Information' %}</h3>
         <div class="table-responsive">
           <table class="table">
+            
+            <tr>
+              <td>{% trans 'Username' %}</td>
+              <td>{{ profile.user.username }}</td>
+            </tr>
             
             {% if can_edit or not profile.hide_email %}
             <tr>
@@ -168,91 +177,8 @@
         {% if request.user == user_this or request.user.profile.is_superuser %}
         {% if MODULE_MEMBERSHIPS_ENABLED %}
         
-        <h3>{% trans 'Memberships' %}
-          {% if membership_apps %}
-          <a title="{% trans 'Join membership' %}" href="{% url "membership_default.add" membership_apps.0.slug %}?username={{ user_this.username }}" class="glyph plus{% if multiple_apps %} toggle-app-links{% endif %}">+</a>
-          {% else %}
-          <a title="{% trans 'Create a membership application' %}" href="{% url "admin:memberships_membershipapp_add" %}" class="glyph plus">+</a>
-          {% endif %}
-        </h3>
         
-        {% if multiple_apps %}
-        <div>
-          {% for app in membership_apps %}
-          <div>
-            <a title="{% trans 'Join membership' %}" href="{% url "membership_default.add" app.slug %}?username={{ user_this.username }}">{% trans 'Join' %}</a>
-            {{ app.name }}
-          </div>
-          {% endfor %}
-        </div>
-        {% endif %}
-        
-        {% if memberships %}
-        <div class="table-responsive">
-          <table class="table">
-            {% for membership in memberships %}
-            <tr>
-              <td>
-                {% if request.user.profile.is_superuser or request.user == membership.user %}
-                <a href="{% url "membership.details" membership.pk %}">{{ membership.membership_type }}
-                </a>
-                {% else %}
-                {{ membership.member_number }} {{ membership.membership_type }}
-                {% endif %}
-              </td>
-              <td>
-                {{ membership.join_dt|date:"M j, Y" }}
-                
-                {% if not membership.is_pending %} - {% firstof membership.expire_dt|date:"M j, Y" "Forever" %}
-                
-                &#43; (grace period:
-                {{ membership.membership_type.expiration_grace_period }} days)
-                
-                {% endif %}
-                
-                <span class="inner-mitm">{{ membership.get_status|capfirst}}</span>
-                
-                {% if membership.can_renew %}
-                {% if membership.corporate_membership_id %}
-                <a href="{% url "membership_default.renew_under_corp" membership.corporate_membership_id membership.id %}?username={{ membership.user.username }}&membership_type_id={{ membership.membership_type.pk }}">{% trans 'Renew' %}</a>
-                {% else %}
-                {% if membership.app %}
-                <a href="{% url "membership_default.renew" membership.app.slug membership.id %}?username={{ membership.user.username }}&membership_type_id={{ membership.membership_type.pk }}">{% trans 'Renew' %}</a>
-                {% endif %}
-                {% endif %}
-                {% endif %}
-                
-                {% if user.is_superuser and membership.past_renewal %}
-                {% if membership.corporate_membership_id %}
-                <a href="{% url "membership_default.renew_under_corp" membership.corporate_membership_id membership.id %}?username={{ membership.user.username }}&membership_type_id={{ membership.membership_type.pk }}">{% trans 'Admin Renew' %}</a>
-                {% else %}
-                {% if membership.app %}
-                <a href="{% url "membership_default.renew" membership.app.slug membership.id %}?username={{ membership.user.username }}&membership_type_id={{ membership.membership_type.pk }}">{% trans 'Admin Renew' %}</a>
-                {% endif %}
-                {% endif %}
-                {% endif %}
-                
-              </td>
-              <td>
-                {% with membership.get_invoice as invoice %}
-                {% if invoice %}
-                <a href="{% url "invoice.view" invoice.pk %}">
-                  {% trans 'Balance' %} {{ invoice.balance|format_currency }}
-                </a>
-                {% endif %}
-                {% endwith %}
-              </td>
-            </tr>
-            {% endfor %}
-          </table>
-        </div>
-        {% else %}
-        <p>{% trans 'Not a member.' %}</p>
-        {% endif %}
-        
-        {% endif  %}
-        {% endif %}
-        
+        <!-- GROUPS -->
         <h3>{% trans 'Groups' %}
           {% if request.user = user_this or admin %}
           <a title="{% trans 'Join or leave group' %}" href="{% url "profile.edit_groups" user_this.username %}" class="glyph gears">S</a>
@@ -303,6 +229,77 @@
           </div>
           <!-- END INVOICE BTN -->
           
+          
+          <!-- MEMBERSHIPS -->
+          
+          <h3>{% trans 'Memberships' %}
+            {% if membership_apps %}
+            <a title="{% trans 'Join membership' %}" href="{% url "membership_default.add" membership_apps.0.slug %}?username={{ user_this.username }}" class="glyph plus{% if multiple_apps %} toggle-app-links{% endif %}">+</a>
+            {% else %}
+            <a title="{% trans 'Create a membership application' %}" href="{% url "admin:memberships_membershipapp_add" %}" class="glyph plus">+</a>
+            {% endif %}
+          </h3>
+          
+          {% if multiple_apps %}
+          <div>
+            {% for app in membership_apps %}
+            <div>
+              <a title="{% trans 'Join membership' %}" href="{% url "membership_default.add" app.slug %}?username={{ user_this.username }}">{% trans 'Join' %}</a>
+              {{ app.name }}
+            </div>
+            {% endfor %}
+          </div>
+          {% endif %}
+          
+          {% if memberships %}
+          <div class="table-responsive">
+            <table class="table">
+              {% for membership in memberships %}
+              <tr>
+                <td>
+                  {% if request.user.profile.is_superuser or request.user == membership.user %}
+                  <a href="{% url "membership.details" membership.pk %}">{{ membership.membership_type }}
+                  </a>
+                  {% else %}
+                  {{ membership.member_number }} {{ membership.membership_type }}
+                  {% endif %}
+                </td>
+                <td>
+                  {{ membership.join_dt|date:"M j, Y" }}
+                  
+                  {% if not membership.is_pending %} - {% firstof membership.expire_dt|date:"M j, Y" "Forever" %}
+                  
+                  &#43; (grace period:
+                  {{ membership.membership_type.expiration_grace_period }} days)
+                  
+                  {% endif %}
+                  
+                  <span class="inner-mitm">{{ membership.get_status|capfirst}}</span>
+                  
+                </td>
+                <td>
+                  {% with membership.get_invoice as invoice %}
+                  {% if invoice %}
+                  <a href="{% url "invoice.view" invoice.pk %}">
+                    {% trans 'Balance' %} {{ invoice.balance|format_currency }}
+                  </a>
+                  {% endif %}
+                  {% endwith %}
+                </td>
+              </tr>
+              {% endfor %}
+            </table>
+          </div>
+          {% else %}
+          <p>{% trans 'Not a member.' %}</p>
+          {% endif %}
+          
+          {% endif  %}
+          {% endif %}
+          
+          
+          <!-- EVENTS -->
+          
           <h3>{% trans "Upcoming Event Registrations" %}</h3>
           
           {% if registrations %}
@@ -341,9 +338,9 @@
         <ul class="list-unstyled">
           {% for contribution in contributions|slice:":5" %}
           {% if contribution.object.status and contribution.object.get_absolute_url %}
-          <li><a href="{{ contribution.object.get_absolute_url }}">{{ contribution.content_type.name|capfirst }}: {{ contribution.title|truncatewords_html:8|slice:":-4" }}</a></li> <span class="create-dt">{{ contribution.create_dt|date:"long" }}</span>
+          <li><a href="{{ contribution.object.get_absolute_url }}">{{ contribution.content_type.name|capfirst }}: {{ contribution.title|truncatewords_html:15|slice:":-4" }}</a></li> <span class="create-dt">{{ contribution.create_dt|date:"long" }}</span>
           {% else %}
-          {{ contribution.title }} <span class="create-dt">{{ contribution.create_dt|date:"long" }}</span>
+          {{ contribution.title }}{{ contribution.headline }} <span class="create-dt">{{ contribution.create_dt|date:"long" }}</span>
           {% endif %}
           {% endfor %}
         </ul>
@@ -388,3 +385,4 @@
 </script>
 
 {% endblock %}
+
