--- a/media/css/base.css
+++ b/media/css/base.css
@@ -94,9 +94,6 @@ h3.panel-title {
   margin: 0 !important;
   padding: 0 !important;
 } 
-#box-1 {
-  margin-top: 10px;
-}
 .navbar {
   margin-bottom: 0 !important;
 }
@@ -112,6 +109,108 @@ a.t-caret.dropdown-toggle:after {
 #nav-top .navbar-brand img {
   padding-top: 5px;
 }
+.nav-icon {
+  margin-right: 6px;
+}
+
+/* TENDENCI NAVBAR 
+=========== */
+#t-admin-megamenu-apps-dd {
+  min-width: 524px;
+}
+#t-admin-megamenu .navbar-nav>li>a {
+  padding-top:3px;
+  padding-bottom: 3px;
+}
+#t-admin-megamenu.navbar-inverse {
+  box-shadow: 0px 2px 10px rgba(0,0,0,.25);
+}
+#t-admin-megamenu.navbar-nav .navbar-nav>li>a {
+  padding: 3.5px 20px 3px;
+  font-size: 14px;
+  color: #F2F2F2;
+}
+#t-admin-megamenu img.nav-logo {    
+  margin-left: 7px;
+  margin-top: 3px;
+}
+#t-admin-megamenu {
+  background-color: #4F4F4F;
+  position: fixed;
+  z-index: 100000;
+  top: 0;
+  width: 100%;
+  height: 30px;
+  padding: 0;
+  margin: 0;
+}
+#t-admin-megamenu .navbar-right .dropdown-menu {
+  left: auto;
+  right: auto;
+}
+#t-admin-megamenu .t-caret:after {
+  content: "\f107";
+  font-family: FontAwesome;
+}
+#t-admin-megamenu .nav .open>a .t-caret:after, 
+#t-admin-megamenu .nav .open>a:hover .t-caret:after, 
+#t-admin-megamenu .nav .open>a:focus .t-caret:after {
+  content: "\f106";
+  font-family: FontAwesome;
+  color: #1CADBA;
+}
+#t-admin-megamenu .dropdown-menu {
+  margin-top: 1px;
+}
+#t-admin-megamenu .dropdown-menu>li>a {
+  padding: 0 3px;
+}
+h4.t-admin-mega-h4 {
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: bold;
+  border-bottom: 1px solid #ccc;
+  padding-bottom: 10px;
+}
+#t-admin-megamenu .dropdown-menu .nav-label {
+  color: #4F4F4F;
+}
+#t-admin-megamenu .dropdown-menu a .nav-label:hover,
+#t-admin-megamenu .dropdown-menu a .nav-label:focus,
+#t-admin-megamenu .dropdown-menu a .nav-label:active {
+  color: #1CADBA;
+}
+#t-admin-megamenu .dropdown-menu a:hover,
+#t-admin-megamenu .dropdown-menu a:focus,
+#t-admin-megamenu .dropdown-menu a:active {
+  text-decoration: none;
+}
+#t-admin-megamenu .nav .open>a, 
+#t-admin-megamenu .nav .open>a:hover, 
+#t-admin-megamenu .nav .open>a:focus,
+#t-admin-megamenu .nav>li>a:hover, 
+#t-admin-megamenu .nav>li>a:focus {
+  background-color: #333333;
+  color: #1CADBA;
+}
+#t-admin-megamenu .dropdown-menu>li>a:hover, 
+#t-admin-megamenu .dropdown-menu>li>a:focus {
+  background: transparent;
+}
+#t-admin-megamenu .navbar-header {
+  height: 30px;
+}
+#t-admin-megamenu .navbar-toggle {
+  margin-top: 7px;
+  margin-bottom: 0;
+  padding-top: 0;
+  padding-bottom: 0;
+}
+#t-admin-megamenu .navbar-toggle .icon-bar {
+  background-color: white;
+}
+
+
 /* JUMBOTRON 
 =========== */
 .jumbotron {
