--- a/templates/base.html
+++ b/templates/base.html
@@ -79,7 +79,7 @@
     
     
     <!-- FAVICON -->
-    <link rel="icon" type="image/png" sizes="16x16" href="{{ THEME_URL }}media/img/willowfavicon.png">      
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ THEME_URL }}media/img/favicon.png">      
     
     <!-- Custom Fonts -->
     <link rel="stylesheet" href="{{ THEME_URL }}media/font-awesome/css/font-awesome.css" type="text/css">
