--- a/templates/base.html
+++ b/templates/base.html
@@ -75,11 +75,11 @@
     
     <!-- To change Bootswatch Theme, use this link  
     ============================================================================ -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/paper/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/flatly/bootstrap.min.css" type="text/css">
     
     
     <!-- FAVICON -->
-    <link rel="icon" type="image/png" sizes="16x16" href="{{ THEME_URL }}media/img/favicon.png">      
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ THEME_URL }}media/img/willowfavicon.png">      
     
     <!-- Custom Fonts -->
     <link rel="stylesheet" href="{{ THEME_URL }}media/font-awesome/css/font-awesome.css" type="text/css">
@@ -173,3 +173,4 @@
     </script>
   </body>
 </html>
+      
