--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,18 @@
 <html dir="ltr" lang="en-US">
   <head>
     
+<!-- Tendenci2018
+
+ ______                   __                                     ___       __      _     __     
+/\__  _\                 /\ \                         __       /'___`\   /'__`\  /' \  /'_ `\   
+\/_/\ \/    __    ___    \_\ \     __    ___     ___ /\_\     /\_\ /\ \ /\ \/\ \/\_, \/\ \L\ \  
+   \ \ \  /'__`\/' _ `\  /'_` \  /'__`\/' _ `\  /'___\/\ \    \/_/// /__\ \ \ \ \/_/\ \/_> _ <_ 
+    \ \ \/\  __//\ \/\ \/\ \L\ \/\  __//\ \/\ \/\ \__/\ \ \      // /_\ \\ \ \_\ \ \ \ \/\ \L\ \
+     \ \_\ \____\ \_\ \_\ \___,_\ \____\ \_\ \_\ \____\\ \_\    /\______/ \ \____/  \ \_\ \____/
+      \/_/\/____/\/_/\/_/\/__,_ /\/____/\/_/\/_/\/____/ \/_/    \/_____/   \/___/    \/_/\/___/ 
+                                                                                                
+Base Theme -->
+    
     {% block full_title %}<title>{% block title %}{{ SITE_GLOBAL_SITEDISPLAYNAME }}{% endblock %}</title>{% endblock %}
     
     <meta charset="UTF-8">
