source code notes

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,8 +9,7 @@
 <html dir="ltr" lang="en-US">
   <head>
     
-<!-- Tendenci2018
-
+<!-- Tendenci2018 Theme Powered by Tendenci — The Open Source AMS
  ______                   __                                     ___       __      _     __     
 /\__  _\                 /\ \                         __       /'___`\   /'__`\  /' \  /'_ `\   
 \/_/\ \/    __    ___    \_\ \     __    ___     ___ /\_\     /\_\ /\ \ /\ \/\ \/\_, \/\ \L\ \  
@@ -19,7 +18,8 @@
      \ \_\ \____\ \_\ \_\ \___,_\ \____\ \_\ \_\ \____\\ \_\    /\______/ \ \____/  \ \_\ \____/
       \/_/\/____/\/_/\/_/\/__,_ /\/____/\/_/\/_/\/____/ \/_/    \/_____/   \/___/    \/_/\/___/ 
                                                                                                 
-Base Theme -->
+Really, really, you're looking at our source code?  You're with us!  You like Open Source, join us!
+Fork us at github.com/tendenci  -->
     
     {% block full_title %}<title>{% block title %}{{ SITE_GLOBAL_SITEDISPLAYNAME }}{% endblock %}</title>{% endblock %}
     
