Add code data-interval="6000" to carousel
To allow users the ease of control over the carousel speed. Added: data-interval="6000"

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -43,7 +43,7 @@
       Main jumbotron for a primary marketing message or call to action. 
       Jumbotron uses Responsive Carousel JS for rotation.
       -->
-   {% list_stories as stories_list limit=3 tags="rotator" quality="90" %}
+   {% list_stories as stories_list limit=3 tags="rotator" quality="90" data-interval="5000" %}
    <div id="myCarousel" class="carousel slide" data-ride="carousel">
      
       <!-- begin: carousel-inner -->
