Code to allow all images to become responsive
 Added bootstrap class "img-responsive" properties and values to the "#pages-top img" selector.

--- a/media/css/base.css
+++ b/media/css/base.css
@@ -6,6 +6,11 @@ body {
 #page-top a:hover {
   text-decoration: none;
 }
+#page-top img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
 p, li {
   font-size: 16px;
 }
