--- a/media/css/base.css
+++ b/media/css/base.css
@@ -8,7 +8,7 @@ body {
 }
 #page-top img {
   display: block;
-  vertical-align: center;
+  vertical-align: middle;
   max-width: 100%;
   height: auto;
 }
