Fix the "Full Description" button (ticket# 2306)

--- a/tendenci2018/templates/events/view.html
+++ b/tendenci2018/templates/events/view.html
@@ -366,6 +366,7 @@
   });
   
   // speaker description toggle
+  $('div.speaker-desc-long').hide();
   $('a.speaker-desc-toggle').click(function() {
   var _this = $(this);
   var speaker_wrap = _this.parents('.speaker-wrap');
@@ -377,6 +378,7 @@
   });
   
   // organizer description toggle
+  $('div.organizer-desc-long').hide();
   $('a.organizer-desc-toggle').click(function() {
   var _this = $(this);
   var speaker_wrap = _this.parents('.organizer-wrap');
