show * for required fields

--- a/tendenci2018/media/css/base.css
+++ b/tendenci2018/media/css/base.css
@@ -551,3 +551,9 @@ div#map {
 .t .membership-detail-wrap fieldset {
   background-color: transparent;
 }
+
+/* for required fields */
+label.required:after {
+    content: '*';
+    color: #ED6270;
+}
