--- a/tendenci2018/templates/pages/edit.html
+++ b/tendenci2018/templates/pages/edit.html
@@ -44,7 +44,7 @@
           <div class="form-group">
             <input class="btn btn-default" type="hidden" id="id_preview_for" name="preview_for"/>
             <input class="btn btn-default" type="submit" value="{% trans 'Save Page Changes' %}" />
-            <input class="btn btn-default" type="button" value="Preview"/>
+            <input class="btn btn-default previewButton" type="button" value="Preview"/>
             
             {% if page.status %}
             
