Removing extraneous ARIA role from carousel

--- a/tendenci2018/templates/homepage.html
+++ b/tendenci2018/templates/homepage.html
@@ -47,7 +47,7 @@
    <div id="myCarousel" class="carousel slide" data-ride="carousel">
      
       <!-- begin: carousel-inner -->
-      <div class="carousel-inner" id="rotator_inner" role="listbox">
+      <div class="carousel-inner" id="rotator_inner">
         
          <!-- begin: item active -->
          <div class="item active">
