Adding 'main' to improve screen reader navigation

--- a/tendenci2018/templates/homepage.html
+++ b/tendenci2018/templates/homepage.html
@@ -38,7 +38,7 @@
 <!-- begin: header -->
 {% theme_include "header.html" %}<!-- Pulls in Header Include -->
 <!-- end: header -->
-<div id="page-top-home">
+<div id="page-top-home" role="main">
    <!-- begin: #myCarousel
       Main jumbotron for a primary marketing message or call to action. 
       Jumbotron uses Responsive Carousel JS for rotation.
