--- a/tendenci2018/templates/footer.html
+++ b/tendenci2018/templates/footer.html
@@ -11,7 +11,7 @@ Modals called below are connected to btns also inside the wysiwyg.
 <div class="container">
 <!-- MAIN FOOTER LINKS INFO: -->     
   {% box 10 %}
-
+  <div class="col-md-6 col-sm-12 col-xs-12"><a href="https://www.tendenci.com">Tendenci - The Open Source AMS</a></div>
 <!-- FOOTER ADD-ONS, can be removed and stay with regular links in footer links box --> 
   <!-- MODAL CONTACT -->          
   <div id="myModal2" class="modal">  
